[gd_scene load_steps=4 format=3 uid="uid://ccx10csmsb1es"]

[ext_resource type="Script" uid="uid://cingpi1trm6io" path="res://dagger.gd" id="1_ixfv2"]
[ext_resource type="Texture2D" uid="uid://dqqcp3vra2gou" path="res://Screenshot 2025-11-21 113122.png" id="2_ixfv2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1ptq"]
radius = 46.0
height = 208.69565

[node name="daggerArea" type="Area2D" groups=["weapons"]]
show_behind_parent = true
scale = Vector2(0.9, 0.9)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ixfv2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -84.44445)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_f1ptq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.1111112, -98.88889)
scale = Vector2(0.4, 0.373)
texture = ExtResource("2_ixfv2")
offset = Vector2(0, -125)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="weapon_attack" from="." to="." method="_on_weapon_attack"]
[connection signal="weapon_parry" from="." to="." method="_on_weapon_parry"]
